config/dependencies/envoy-gateway/gateway/gateway-class-cluster-ip.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoygateway-cluster-ip
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: cluster-ip
    namespace: gateway-system
